--- a/template/home.html
+++ b/template/home.html
@@ -221,7 +221,7 @@
                             label: 'Line Chart',
                             data: data.temperature,
                             fill: false,
-                            borderColor: 'rgb(75, 192, 192)',
+                            borderColor: 'red',
                             tension: 0.1
                         }]
                     },
@@ -264,7 +264,8 @@
                             label: 'Line Chart',
                             data: data.humidity,
                             fill: false,
-                            borderColor: 'rgb(75, 200, 0)',
+
+                            borderColor: 'rgb(75, 192, 192)',
                             tension: 0.1
                         }]
                     },
@@ -290,7 +291,7 @@
               <div class="col-lg-12">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Temperature et Humidity</h5>
+              <h5 class="card-title">Temperature and Humidity</h5>
 
               <!-- Line Chart -->
               <canvas id="humandtemp" style="max-height: 400px;"></canvas>
@@ -309,14 +310,14 @@
                             label: "Humidity",
                             data: data.humidity,
                             backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                                  borderColor: 'rgba(75, 192, 192, 1)',
-                                borderWidth: 1
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            borderWidth: 1
                           },
                           {
                              label: "Temperature",
                              data: data.temperature,
-                             backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                             borderColor: 'rgba(255, 99, 132, 1)',
+                             backgroundColor: 'red',
+                             borderColor: 'red',
                              borderWidth: 1
                           }
                         ]
